updated about images

--- a/templates/about.html
+++ b/templates/about.html
@@ -59,7 +59,7 @@
       <div class="card border-primary text-center bg-primary col-mb-4" style="max-width: 35rem;">
         <div class="card-header bg-primary">
           <h3>A. LINDA PENNY</h3></div>
-        <img class="card-img-top" src="/static/ImagesAnaLindaP.jpg">
+        <img class="card-img-top" src="/static/Images/AnaLindaP.jpg">
         <div class="card-body">
           <a class="nav-link text-center" href="https://www.linkedin.com/in/linda-penny" target="_blank">LinkedIn</a>
           <a class="nav-link text-center" href="https://github.com/in/AnaLindaPenny" target="_blank">GitHub</a>
