updated about image

--- a/templates/about.html
+++ b/templates/about.html
@@ -192,7 +192,7 @@
 <br>
   <div class="row">
     <div class="column2">      
-      <img src="/static/Supergirl.png" alt="Supergirl" style="width: 275px"> 
+      <img src="/static/Images/Supergirl.png" alt="Supergirl" style="width: 275px"> 
 
 <br>
 <footer class="footer">
