update images home

--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-            <img class="nav-heroboy" src="/static/Superboy.png" 
-            a class="navbar-brand" href="index.html">    LEAGUE OF AVENGERS
-            <img class="nav-herogirl" src="/static/Supergirl.png">    
+            <img class="nav-heroboy" src="/static/Images/Superboy.png" 
+            a class="navbar-brand" href="https://leagueofavengers.herokuapp.com">    LEAGUE OF AVENGERS
+            <img class="nav-herogirl" src="/static/Images/Supergirl.png">       
             </a>        
         </div>
       </div>
@@ -40,7 +40,7 @@
 <br>
     <div class="hero text-center">
         <p1>SUPERHERO<p1>
-        <img class=".hero" src="/static/Marvel_vs_DC.png"
+        <img class=".hero" src="/static/Images/Marvel_vs_DC.png"
         <p1>  WORLD</p1>
     </div>  
     <div class="container">
