updated navbar links on all

--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,7 @@
         <div class="navbar-header">
             <img class="nav-heroboy" src="/static/Images/Superboy.png" 
             a class="navbar-brand" href="https://leagueofavengers.herokuapp.com">    LEAGUE OF AVENGERS
-            <img class="nav-herogirl" src="/static/Images/Supergirl.png">       
+            <img class="nav-herogirl" src="/static/Images/Supergirl.png">    
             </a>        
         </div>
       </div>
@@ -26,12 +26,14 @@
     <sub-navbar-nav id="sub-navbar" class="sub-navbar sub-navbar default">
         <div class="container-fluid">
             <ul>
-                <li><a href="about.html">TEAM</a></li>
-                <li><a href="#mcu">MARVEL CINEMATIC UNIVERSE</a></li>
-                <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
-                <li><a href="#visualizations">VISUALIZATIONS</a></li>
-                <li><a href="#stocks">STOCKS</a></li>
-                <li><a href="api.html">API</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/about">ABOUT</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/machine/marvel">MARVEL MACHINE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/api/dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/machine/dc">DC MACHINE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/chartsjs">COMPARISON</a></li> 
+                <li><a href="https://leagueofavengers.herokuapp.com/maps">GLOBAL</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
                 <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
             </ul>
         </div>
