--- a/templates/API.html
+++ b/templates/API.html
@@ -15,9 +15,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-            <img class="nav-heroboy" src="/static/Superboy.png" 
+            <img class="nav-heroboy" src="/static/Images/Superboy.png" 
             a class="navbar-brand" href="https://leagueofavengers.herokuapp.com">    LEAGUE OF AVENGERS
-            <img class="nav-herogirl" src="/static/Supergirl.png">    
+            <img class="nav-herogirl" src="/static/Images/Supergirl.png">    
             </a>        
         </div>
       </div>
@@ -28,9 +28,11 @@
             <ul>
                 <li><a href="https://leagueofavengers.herokuapp.com/about">ABOUT</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
-                <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
-                <li><a href="#visualizations">VISUALIZATIONS</a></li>
-                <li><a href="https://leagueofavengers.herokuapp.com/maps">MAPS</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/machine/marvel">MARVEL MACHINE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/api/dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/machine/dc">DC MACHINE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/chartsjs">COMPARISON</a></li> 
+                <li><a href="https://leagueofavengers.herokuapp.com/maps">GLOBAL</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
                 <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
             </ul>
