--- a/templates/mcu.html
+++ b/templates/mcu.html
@@ -15,9 +15,9 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-            <img class="nav-heroboy" src="/static/Superboy.png"> 
-            <a class="navbar-brand" href="index.html">    LEAGUE OF AVENGERS
-            <img class="nav-herogirl" src="/static/Supergirl.png">    
+            <img class="nav-heroboy" src="/static/Images/Superboy.png" 
+            a class="navbar-brand" href="https://leagueofavengers.herokuapp.com">    LEAGUE OF AVENGERS
+            <img class="nav-herogirl" src="/static/Images/Supergirl.png">    
             </a>        
         </div>
       </div>
@@ -26,13 +26,15 @@
     <sub-navbar-nav id="sub-navbar" class="sub-navbar sub-navbar default">
         <div class="container-fluid">
             <ul>
-                <li><a href="#team">TEAM</a></li>
-                <li><a href="mcu.html">MARVEL CINEMATIC UNIVERSE</a></li>
-                <li><a href="#dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
-                <li><a href="#visualizations">VISUALIZATIONS</a></li>
-                <li><a href="#stocks">STOCKS</a></li>
-                <li><a href="#api">API</a></li>
-                <li style="float:right"><a class="active" href="index.html">HOME</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/about">ABOUT</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/machine/marvel">MARVEL MACHINE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/api/dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/machine/dc">DC MACHINE</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/chartsjs">COMPARISON</a></li> 
+                <li><a href="https://leagueofavengers.herokuapp.com/maps">GLOBAL</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
+                <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
             </ul>
         </div>
     </sub-navbar-nav> 
