update navbar links

--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -29,15 +29,15 @@
           <sub-navbar-nav id="sub-navbar" class="sub-navbar sub-navbar default">
               <div class="container-fluid">
                   <ul>
-                      <li><a href="https://leagueofavengers.herokuapp.com/about">ABOUT</a></li>
-                      <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
-                      <li><a href="https://leagueofavengers.herokuapp.com/machine/marvel">MARVEL MACHINE</a></li>
-                      <li><a href="https://leagueofavengers.herokuapp.com/api/dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
-                      <li><a href="https://leagueofavengers.herokuapp.com/machine/dc">DC MACHINE</a></li>
-                      <li><a href="https://leagueofavengers.herokuapp.com/chartsjs">COMPARISON</a></li> 
-                      <li><a href="https://leagueofavengers.herokuapp.com/maps">GLOBAL</a></li>
-                      <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
-                      <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
+                    <li><a href="https://leagueofavengers.herokuapp.com/about">ABOUT</a></li>
+                    <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
+                    <li><a href="https://leagueofavengers.herokuapp.com/machine/marvel">MARVEL MACHINE</a></li>
+                    <!-- <li><a href="https://leagueofavengers.herokuapp.com/api/dceu">DC EXTD CINEMATIC UNIVERSE</a></li> -->
+                    <li><a href="https://leagueofavengers.herokuapp.com/machine/dc">DC MACHINE</a></li>
+                    <li><a href="https://leagueofavengers.herokuapp.com/chartsjs">COMPARISON</a></li> 
+                    <li><a href="https://leagueofavengers.herokuapp.com/maps">GLOBAL</a></li>
+                    <li><a href="https://leagueofavengers.herokuapp.com/api">API</a></li>
+                    <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
                   </ul>
               </div>
           </sub-navbar-nav> 
