--- a/templates/mcu_machinelearning.html
+++ b/templates/mcu_machinelearning.html
@@ -33,7 +33,7 @@
                 <li><a href="https://leagueofavengers.herokuapp.com/machine/dc">DC MACHINE</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/chartsjs">COMPARISON</a></li> 
                 <li><a href="https://leagueofavengers.herokuapp.com/maps">GLOBAL</a></li>
-                <li><a href="https://leagueofavengers.herokuapp.com/api/imdb">API</a></li>
+                <li><a href="https://leagueofavengers.herokuapp.com/api">API</a></li>
                 <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
             </ul>
         </div>
