--- a/templates/mcu_machinelearning.html
+++ b/templates/mcu_machinelearning.html
@@ -29,7 +29,7 @@
                 <li><a href="https://leagueofavengers.herokuapp.com/about">ABOUT</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/machine/marvel">MARVEL MACHINE</a></li>
-                <li><a href="https://leagueofavengers.herokuapp.com/api/dceu">DC EXTD CINEMATIC UNIVERSE</a></li>
+                <!-- <li><a href="https://leagueofavengers.herokuapp.com/api/dceu">DC EXTD CINEMATIC UNIVERSE</a></li> -->
                 <li><a href="https://leagueofavengers.herokuapp.com/machine/dc">DC MACHINE</a></li>
                 <li><a href="https://leagueofavengers.herokuapp.com/chartsjs">COMPARISON</a></li> 
                 <li><a href="https://leagueofavengers.herokuapp.com/maps">GLOBAL</a></li>
