--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -5,42 +5,61 @@
   <meta charset="utf-8">
   <title>League of Avengers</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/superhero/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Ubuntu" rel="stylesheet">
-  <link rel="stylesheet" href="../static/css/style.css">
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="../static/css/bootstrap.css">
 </head>
 
 <body>
-  <div class="wrapper">
-    <nav class="navbar navbar-default">
-      <div class="container-fluid">
-        <div class="navbar-header">
-            <img class="nav-heroboy" src="/static/Images/Superboy.png" 
-            a class="navbar-brand" href="https://leagueofavengers.herokuapp.com">    LEAGUE OF AVENGERS
-            <img class="nav-herogirl" src="/static/Images/Supergirl.png">    
-            </a>        
+  <nav class="navbar navbar-expand-lg navbar-dark bs-danger">
+    <div class="container-fluid"> 
+      <a class="navbar-brand bs-danger" href="/">
+        <div class="logo-image">
+              <img src="/static/Images/Superboy.png" class="img-fluid">
         </div>
+      </a>
+      <a class="nav-brand" src="/static/Images/Superboy.png"></a>
+      <a class="navbar-brand"> League of Avengers
+        <a class="navbar-brand" href="/">
+          <div class="logo-image">
+                <img src="/static/Images/Supergirl.png" class="img-fluid">
+          </div>
+        </a>
+      </a>
+      
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="navbarColor01">
+        <ul class="navbar-nav me-auto">
+          <li class="nav-item">
+            <a class="nav-link active" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">Methodology</a>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
+            <div class="dropdown-menu">
+              <a class="dropdown-item" href="chartjs.html">A Broad Perspective</a>
+              <a class="dropdown-item" href="maps.html">International Maps</a>
+              <a class="dropdown-item" href="machinelearning.html">Machine Learning</a>
+              <a class="dropdown-item" href="mcu.html">Tableau</a>
+            </div>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">Meet the Team</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="API.html">API</a>
+          </li>
+        </ul>
       </div>
-    </nav>
-    <br>
-    <sub-navbar-nav id="sub-navbar" class="sub-navbar sub-navbar default">
-        <div class="container-fluid">
-            <ul>
-                <li><a href="https://leagueofavengers.herokuapp.com/about">ABOUT</a></li>
-                <li><a href="https://leagueofavengers.herokuapp.com/mcu">MARVEL CINEMATIC UNIVERSE</a></li>
-                <li><a href="https://leagueofavengers.herokuapp.com/machine/marvel">MARVEL MACHINE</a></li>
-                <!-- <li><a href="https://leagueofavengers.herokuapp.com/api/dceu">DC EXTD CINEMATIC UNIVERSE</a></li> -->
-                <li><a href="https://leagueofavengers.herokuapp.com/machine/dc">DC MACHINE</a></li>
-                <li><a href="https://leagueofavengers.herokuapp.com/chartsjs">COMPARISON</a></li> 
-                <li><a href="https://leagueofavengers.herokuapp.com/maps">GLOBAL</a></li>
-                <li><a href="https://leagueofavengers.herokuapp.com/api">API</a></li>
-                <li style="float:right"><a class="active" href="https://leagueofavengers.herokuapp.com">HOME</a></li>
-            </ul>
-        </div>
-    </sub-navbar-nav> 
-  <br></br>
+    </div>
+  </nav>
 
-    <div class="container">
+  <div class="container">
     <div class="jumbotron">
         <h1 class="display-4"> Machine Learning</h1>
         <p class="lead">Below you'll see the results of machine learning for the MCU and the DCEU. </p>
@@ -52,20 +71,20 @@
 
   <div class="container">
     <div class="row">
-        <div class="column" id= 'Description'>
-            <h2> MCU Heatmap </h2>
+        <div class="column">
+            <h2 class= "blender"> MCU Heatmap </h2>
             <hr>
-            <img src="../static/Images/mcu_heat_map.png" class="img-responsive" alt="MCU Heatmap">
+            <img src="../static/Images/mcu_heat_map.png" class="responsive" alt="MCU Heatmap">
             <p> The first step was to create a heatmap to emphasize the correlation between all the variables using seaborn. </p>
             <p> As you can see, the darker the color, the higher the positivie correlation.  The more yellow the color is, the closer it is to negative correlation. </p>
             <p> This image is condensed to emphasize the correlation by color, scroll down to see another seaborn correlation format. </p>
             <hr>
         </div>
 
-        <div class="column" id="image">
-            <h2> DCEU Heatmap </h2>
+        <div class="column">
+            <h2 class= "blender"> DCEU Heatmap </h2>
             <hr>
-            <img src="../static/Images/dceu_heat_map.png" class="img-responsive" alt="MCU Heatmap">
+            <img src="../static/Images/dceu_heat_map.png" class="responsive" alt="MCU Heatmap">
             <p> The first step was to create a heatmap to emphasize the correlation between all the variables using seaborn. </p>
             <p> As you can see, the darker the color, the higher the positivie correlation.  The more yellow the color is, the closer it is to negative correlation. </p>
             <p> This image is condensed to emphasize the correlation by color, scroll down to see another seaborn correlation format. </p>
@@ -78,19 +97,20 @@
 
   <div class="container">
     <div class="row">
-        <div class="column" id= 'Description'>
-            <h2>  MCU Pair Plot </h2>
+        <div class="column">
+            <h2 class= "blender">  MCU Pair Plot </h2>
             <hr>
+            <img src="../static/Images/mcu_pairplot.png" class="responsive" alt="DCEU Pairplot">
             <p> This is another generated image from seaborn called a pairplot.  It does the same type of comparison as the heatmap, but instead of giving a color based on correlation, it shows what the graphs would look like for each comparison. </p>
             <p> The bar chart graphs it created are comparing the same variables.   </p>
             <p> This was very helpful in planning which graphs to create to do machine learning on.  </p>
             <hr>
         </div>
 
-        <div class="column" id="image">
+        <div class="column">
             <h2 class="blender"> DCEU Pair Plot </h2>
             <hr>
-            <img src="../static/Images/dceu_pairplot.png" class="img-responsive" alt="MCU Pairplot">
+            <img src="../static/Images/dceu_pairplot.png" class="responsive" alt="DCEU Pairplot">
             <p> This is another generated image from seaborn called a pairplot.  It does the same type of comparison as the heatmap, but instead of giving a color based on correlation, it shows what the graphs would look like for each comparison. </p>
             <p> The bar chart graphs it created are comparing the same variables.   </p>
             <p> This was very helpful in planning which graphs to create to do machine learning on.  </p>
@@ -99,9 +119,53 @@
     </div>
   </div>
 
+  <div class="container">
+    <div class="row">
+        <div class="column">
+            <h2 class= "blender">  MCU Sample Predictions </h2>
+            <hr>
+            <img src="../static/Images/mcu_sample_predictions.png" class="responsive" alt="DCEU Pairplot">
+            <p> This is another generated image from seaborn called a pairplot.  It does the same type of comparison as the heatmap, but instead of giving a color based on correlation, it shows what the graphs would look like for each comparison. </p>
+            <p> The bar chart graphs it created are comparing the same variables.   </p>
+            <p> This was very helpful in planning which graphs to create to do machine learning on.  </p>
+            <hr>
+        </div>
 
+        <div class="column">
+            <h2 class="blender"> DCEU Sample Predictions </h2>
+            <hr>
+            <img src="../static/Images/dceu_sample_predictions.png" class="responsive" alt="DCEU Pairplot">
+            <p> This is another generated image from seaborn called a pairplot.  It does the same type of comparison as the heatmap, but instead of giving a color based on correlation, it shows what the graphs would look like for each comparison. </p>
+            <p> The bar chart graphs it created are comparing the same variables.   </p>
+            <p> This was very helpful in planning which graphs to create to do machine learning on.  </p>
+            <hr>
+        </div>
+    </div>
+  </div>
 
+  <div class="container">
+    <div class="row">
+        <div class="column">
+            <h2 class= "blender">  MCU Gross Predictions </h2>
+            <hr>
+            <img src="../static/Images/mcu_gross_predictions.png" class="responsive" alt="DCEU Pairplot">
+            <p> This is another generated image from seaborn called a pairplot.  It does the same type of comparison as the heatmap, but instead of giving a color based on correlation, it shows what the graphs would look like for each comparison. </p>
+            <p> The bar chart graphs it created are comparing the same variables.   </p>
+            <p> This was very helpful in planning which graphs to create to do machine learning on.  </p>
+            <hr>
+        </div>
 
+        <div class="column">
+            <h2 class="blender"> DCEU Gross Predictions </h2>
+            <hr>
+            <img src="../static/Images/dceu_gross_predictions.png" class="responsive" alt="DCEU Pairplot">
+            <p> This is another generated image from seaborn called a pairplot.  It does the same type of comparison as the heatmap, but instead of giving a color based on correlation, it shows what the graphs would look like for each comparison. </p>
+            <p> The bar chart graphs it created are comparing the same variables.   </p>
+            <p> This was very helpful in planning which graphs to create to do machine learning on.  </p>
+            <hr>
+        </div>
+    </div>
+  </div>
  
  <footer class="footer">
       <div class="container text-center py-3">
