chartjs styling changes

--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -44,7 +44,7 @@
 
         <div class="container-fluid">
             <div class="row pt-5 mt-5 w-50 mx-auto">
-                <div class="col bg-white p-5">
+                <div class="col bg-white p-5 round" id="titlecard">
                     <div class="h1 fw-bold text-center text-dark">Superhero Films</div>
                     <div class="h3 fw-bold text-center text-dark">A Broad Perspective</div>
                 </div>
