--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Methodology</a>
+            <a class="nav-link" href="methodology.html">Methodology</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
@@ -51,7 +51,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="about.html">Meet the Team</a>
+            <a class="nav-link" href="team.html">Meet the Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="API.html">API</a>
