--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -15,14 +15,14 @@
     <div class="container-fluid"> 
       <a class="navbar-brand bs-danger" href="/">
         <div class="logo-image">
-              <img src="/static/Images/Superboy.png" class="img-fluid">
+              <img src="/static/Images/captain_marvel.png" class="img-fluid">
         </div>
       </a>
-      <a class="nav-brand" src="/static/Images/Superboy.png"></a>
+      <a class="nav-brand" src="/static/Images/captain_marvel.png"></a>
       <a class="navbar-brand"> League of Avengers
         <a class="navbar-brand" href="/">
           <div class="logo-image">
-                <img src="/static/Images/Supergirl.png" class="img-fluid">
+                <img src="/static/Images/superman.png" class="img-fluid">
           </div>
         </a>
       </a>
