--- a/templates/team.html
+++ b/templates/team.html
@@ -33,28 +33,28 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="index.html">Home
+            <a class="nav-link active" href="https://leagueofavengers.herokuapp.com">Home
               <span class="visually-hidden">(current)</span>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="methodology.html">Methodology</a>
+            <a class="nav-link" href="https://leagueofavengers.herokuapp.com/methodology">Methodology</a>
           </li>
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="chartjs.html">A Broad Perspective</a>
-              <a class="dropdown-item" href="maps.html">International Maps</a>
-              <a class="dropdown-item" href="machinelearning.html">Box Office Predictions</a>
-              <a class="dropdown-item" href="mcu.html">Marvel Sequel-Verse</a>
-              <a class="dropdown-item" href="dc.html">DC Sequel-Verse</a>
+              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/chartjs">A Broad Perspective</a>
+              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/maps">International Maps</a>
+              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/machinelearning">Box Office Predictions</a>
+              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/mcu">Marvel Sequel-Verse</a>
+              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/mdc">DC Sequel-Verse</a>
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="team.html">Meet the Team</a>
+            <a class="nav-link" href="https://leagueofavengers.herokuapp.com/team">Meet the Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="API.html">API</a>
+            <a class="nav-link" href="https://leagueofavengers.herokuapp.com/api">API</a>
           </li>
         </ul>
       </div>
