Small navbar changes

--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -44,7 +44,7 @@
             <div class="dropdown-menu">
               <a class="dropdown-item" href="chartjs.html">A Broad Perspective</a>
               <a class="dropdown-item" href="maps.html">International Maps</a>
-              <a class="dropdown-item" href="machinelearning.html">Machine Learning</a>
+              <a class="dropdown-item" href="machinelearning.html#">Machine Learning</a>
               <a class="dropdown-item" href="mcu.html">Tableau</a>
             </div>
           </li>
