--- a/templates/team.html
+++ b/templates/team.html
@@ -51,7 +51,7 @@
             </div>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="team.html">Meet the Team</a>
+            <a class="nav-link" href="team.html#">Meet the Team</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="API.html">API</a>
