--- a/templates/dc.html
+++ b/templates/dc.html
@@ -40,7 +40,7 @@
             <a class="nav-link" href="methodology.html">Methodology</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
+            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
             <div class="dropdown-menu">
               <a class="dropdown-item" href="chartjs.html">A Broad Perspective</a>
               <a class="dropdown-item" href="maps.html">International Maps</a>
