--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -48,7 +48,7 @@
                       <a class="dropdown-item" href="maps.html">International Maps</a>
                       <a class="dropdown-item" href="machinelearning.html">Box Office Predictions</a>
                       <a class="dropdown-item" href="mcu.html">MCU Sequel-verse</a>
-                      <a class="dropdown-item" href="machinelearning.html">DC Sequel-Verse</a>
+                      <a class="dropdown-item" href="dc.html">DC Sequel-Verse</a>
                     </div>
                   </li>
                   <li class="nav-item">
