--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -44,8 +44,9 @@
             <div class="dropdown-menu">
               <a class="dropdown-item" href="chartjs.html">A Broad Perspective</a>
               <a class="dropdown-item" href="maps.html">International Maps</a>
-              <a class="dropdown-item" href="machinelearning.html#">Machine Learning</a>
-              <a class="dropdown-item" href="mcu.html">Tableau</a>
+              <a class="dropdown-item" href="machinelearning.html#">Box Office Predictions</a>
+              <a class="dropdown-item" href="mcu.html">Marvel Sequel-Verse</a>
+              <a class="dropdown-item" href="dc.html">DC Sequel-Verse</a>
             </div>
           </li>
           <li class="nav-item">
