--- a/templates/mcu.html
+++ b/templates/mcu.html
@@ -47,7 +47,7 @@
               <a class="dropdown-item" href="machinelearning.html">Box Office Predictions</a>
               <a class="dropdown-item active" href="mcu.html#">Marvel Sequel-Verse</a>
                 <span class="visually-hidden">(current)</span>
-              <a class="dropdown-item" href="machinelearning.html">DC Sequel-Verse</a>
+              <a class="dropdown-item" href="dc.html">DC Sequel-Verse</a>
             </div>
           </li>
           <li class="nav-item">
