--- a/templates/team.html
+++ b/templates/team.html
@@ -47,11 +47,12 @@
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/maps">International Maps</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/machinelearning">Box Office Predictions</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/mcu">Marvel Sequel-Verse</a>
-              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/mdc">DC Sequel-Verse</a>
+              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/dc">DC Sequel-Verse</a>
             </div>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://leagueofavengers.herokuapp.com/team">Meet the Team</a>
+              <span class="visually-hidden">(current)</span>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://leagueofavengers.herokuapp.com/api">API</a>
