--- a/templates/API.html
+++ b/templates/API.html
@@ -53,7 +53,7 @@
             <a class="nav-link" href="https://leagueofavengers.herokuapp.com/team">Meet the Team</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://leagueofavengers.herokuapp.com/api">API</a>
+            <a class="nav-link active" href="https://leagueofavengers.herokuapp.com/api">API</a>
               <span class="visually-hidden">(current)</span>
           </li>
         </ul>
