--- a/templates/dc.html
+++ b/templates/dc.html
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarColor01">
         <ul class="navbar-nav me-auto">
           <li class="nav-item">
-            <a class="nav-link active" href="https://leagueofavengers.herokuapp.com">Home
+            <a class="nav-link" href="https://leagueofavengers.herokuapp.com">Home
             </a>
           </li>
           <li class="nav-item">
@@ -46,7 +46,7 @@
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/maps">International Maps</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/machinelearning">Box Office Predictions</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/mcu">Marvel Sequel-Verse</a>
-              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/dc">DC Sequel-Verse</a>
+              <a class="dropdown-item active" href="https://leagueofavengers.herokuapp.com/dc">DC Sequel-Verse</a>
                 <span class="visually-hidden">(current)</span>
             </div>
           </li>
