--- a/templates/machinelearning.html
+++ b/templates/machinelearning.html
@@ -40,22 +40,14 @@
             <a class="nav-link" href="https://leagueofavengers.herokuapp.com/methodology">Methodology</a>
           </li>
           <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
+            <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
             <div class="dropdown-menu">
-<<<<<<< HEAD
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/chartjs">A Broad Perspective</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/maps">International Maps</a>
-              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/machinelearning">Box Office Predictions</a>
+              <a class="dropdown-item active" href="https://leagueofavengers.herokuapp.com/machinelearning">Box Office Predictions</a>
                 <span class="visually-hidden">(current)</span>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/mcu">Marvel Sequel-Verse</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/dc">DC Sequel-Verse</a>
-=======
-              <a class="dropdown-item" href="chartjs.html">A Broad Perspective</a>
-              <a class="dropdown-item" href="maps.html">International Maps</a>
-              <a class="dropdown-item" href="machinelearning.html#">Box Office Predictions</a>
-              <a class="dropdown-item" href="mcu.html">Marvel Sequel-Verse</a>
-              <a class="dropdown-item" href="dc.html">DC Sequel-Verse</a>
->>>>>>> 881d6858fbef02c8f02e73b4f165410a59fe54d4
             </div>
           </li>
           <li class="nav-item">
