--- a/templates/methodology.html
+++ b/templates/methodology.html
@@ -37,7 +37,7 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="https://leagueofavengers.herokuapp.com/methodology">Methodology</a>
+            <a class="nav-link active" href="https://leagueofavengers.herokuapp.com/methodology">Methodology</a>
                 <span class="visually-hidden">(current)</span>
           </li>
           <li class="nav-item dropdown">
