--- a/templates/chartjs.html
+++ b/templates/chartjs.html
@@ -43,7 +43,7 @@
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle active" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
                     <div class="dropdown-menu">
-                        <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/chartjs">A Broad Perspective</a>
+                        <a class="dropdown-item active" href="https://leagueofavengers.herokuapp.com/chartjs">A Broad Perspective</a>
                             <span class="visually-hidden">(current)</span>
                         <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/maps">International Maps</a>
                         <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/machinelearning">Box Office Predictions</a>
