--- a/templates/index.html
+++ b/templates/index.html
@@ -47,7 +47,7 @@
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/maps">International Maps</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/machinelearning">Box Office Predictions</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/mcu">Marvel Sequel-Verse</a>
-              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/ddc">DC Sequel-Verse</a>
+              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/dc">DC Sequel-Verse</a>
             </div>
           </li>
           <li class="nav-item">
