--- a/templates/maps.html
+++ b/templates/maps.html
@@ -42,10 +42,9 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Visualizations</a>
             <div class="dropdown-menu">
-              <a class="dropdown-item" href="chartjs.html">A Broad Perspective</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/chartjs">A Broad Perspective</a>
+              <a class="dropdown-item active" href="https://leagueofavengers.herokuapp.com/maps">International Maps</a>
                 <span class="visually-hidden">(current)</span>
-              <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/maps">International Maps</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/machinelearning">Box Office Predictions</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/mcu">Marvel Sequel-Verse</a>
               <a class="dropdown-item" href="https://leagueofavengers.herokuapp.com/dc">DC Sequel-Verse</a>
